crates/ridge-parser/tests/fixtures/errors/p001_match_arm_missing_arrow.rg
-- expect: P001
-- Trigger: match arm missing `->`.
fn f x =
    match x
        A 1
